style.css
body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    display: flex;
    flex-flow: column nowrap;
    margin: 0;
}

/* Upper Header */

.header {
    background-color: #1F2937;
    padding: 16px 16px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    border-radius: 40%;
    width: 50px;
    height: 50px;
}

.leftheader {
    display: inline-flex;
    gap: 16px;
    align-items: center;
    margin-left: 72px;
}

ul {
    list-style-type: none;
    display: inline-flex;
    gap: 16px;
    margin: 0 72px 0 0;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

li:hover {
    transform: scale(1.2);
}

.headertext {
    color: #F9FAF8;
    font-size: 24px;
}

/* Lower Header */

.subheader {
    background-color: #1F2937;
    padding: 66px 88px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 36px;
}

.forestimg {
    width: 1000px;
    height: 200px;
    border-radius: 8px;
    box-shadow: 0px 0px 12px 0px rgb(113, 113, 113);
}

.heading {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
    margin-bottom: 24px;
}

.left-text {
    display: block;
}

.subtext {
    color: #E5E7EB;
    margin-bottom: 16px;
}

.full {
    background-color: #3882F6;
    color: white;
    margin: 8px 0px;
    padding: 8px;
    font-size: 12px;
    border: 0;
    border-radius: 10px;
}

.full:hover {
    box-shadow: 0px 0px 0px 2px rgb(255, 255, 255);
}

.treetext {
    color: rgb(135, 196, 135);
}

.datatext {
    color: rgb(190, 190, 190);
}

/* Content */

.heading2 {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px;
}

.box-container {
    display: flex;
    gap: 16px;
    padding: 16px;
    margin: 16px;

}

.box-text {
    text-align: center;
}

.box img {
    width: 100px;
    height: 100px;
    border: 2px solid #3882F6;
    border-radius: 16px;
}

